--- a/ambevwebapp/src/main/webapp/css/styles.css
+++ b/ambevwebapp/src/main/webapp/css/styles.css
@@ -1,4 +1,10 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+ html, body, span, applet, object, iframe, h1, h2, h3, h4, h5, h6,
+ p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, 
+ dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, 
+ tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, 
+ legend, caption, article, aside,
+  canvas, details, embed, figure, figcaption, footer, header, hgroup, menu,
+   nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -13,6 +19,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 html { overflow-y: scroll; }
 
 body {
@@ -43,9 +50,10 @@ blockquote:before, blockquote:after, q:before, q:after { content: ''; content: n
 strong, b { font-weight: bold; }
 em, i { font-style: italic; }
 
+/*
 table { border-collapse: collapse; border-spacing: 0; }
 img { border: 0; max-width: 100%; height: auto; width: 100%; }
-
+*/
 
 /** page structure **/
 nav {
